--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         resultElement.style.color = 'green';
       } else {
         resultElement.textContent = 'Invalid';
+        alert("Valid Forms:\n555-555-5555\n(555)555-5555\n(555) 555-5555\n555 555 5555\n5555555555\n1 555 555 5555");
         resultElement.style.color = 'red';
       }
     }
